--- a/components/projects/projects-page.mdx
+++ b/components/projects/projects-page.mdx
@@ -5,7 +5,7 @@ import {
   CardFooter,
   CardHeader,
   CardTitle,
-} from "@/components/ui/card";
+} from '@/components/ui/card';
 
 # Welcome to my MDX page!
 
