--- a/components/projects/rocket-car/rocket-car-page.mdx
+++ b/components/projects/rocket-car/rocket-car-page.mdx
@@ -5,11 +5,11 @@ import {
   CardFooter,
   CardHeader,
   CardTitle,
-} from "@/components/ui/card";
+} from '@/components/ui/card';
 
 # Welcome to my MDX page!
 
-This is some **bold** and _italics_ 
+This is some **bold** and _italics_
 
 This is a list in markdown:
 
