--- a/components/projects/rocket-car/rocket-car-page.mdx
+++ b/components/projects/rocket-car/rocket-car-page.mdx
@@ -1,11 +1,8 @@
-import {
-  Card,
-  CardContent,
-  CardDescription,
-  CardFooter,
-  CardHeader,
-  CardTitle,
-} from '@/components/ui/card';
+---
+'$schema': types/project.schema.yaml
+
+category: Book
+---
 
 # Welcome to my MDX page!
 
@@ -18,16 +15,3 @@ This is a list in markdown:
 - Three
 
 Checkout my React component:
-
-<Card>
-  <CardHeader>
-    <CardTitle>Card Title</CardTitle>
-    <CardDescription>Card Description</CardDescription>
-  </CardHeader>
-  <CardContent>
-    <p>Card Content</p>
-  </CardContent>
-  <CardFooter>
-    <p>Card Footer</p>
-  </CardFooter>
-</Card>
