fix: eslint-mdx public fix and release update

--- a/components/projects/rocket-car/rocket-car-page.mdx
+++ b/components/projects/rocket-car/rocket-car-page.mdx
@@ -1,17 +1,1 @@
----
-'$schema': types/project.schema.yaml
-
-category: Book
----
-
-# Welcome to my MDX page!
-
-This is some **bold** and _italics_
-
-This is a list in markdown:
-
-- One
-- Two
-- Three
-
-Checkout my React component:
+# Hello, world!
