fix(dx): fix type checking in mdx files

--- a/components/projects/rocket-car/rocket-car-page.mdx
+++ b/components/projects/rocket-car/rocket-car-page.mdx
@@ -1,1 +1,20 @@
+import { Button } from '@/components/ui/button';
+import { Card } from '@/components/ui/card';
+
 # Hello, world!
+
+# Hello, world!
+
+# Hello, world!
+
+# Hello, world!
+
+<Card>
+  <h1>Hello, world!</h1>
+</Card>
+
+# Hello, world!
+
+# Hello, world!
+
+<Button>Something</Button>
