chore(mdx): improve mdx lint

--- a/components/projects/rocket-car/rocket-car-page.mdx
+++ b/components/projects/rocket-car/rocket-car-page.mdx
@@ -3,18 +3,31 @@ import { Card } from '@/components/ui/card';
 
 # Hello, world!
 
-# Hello, world!
+> Hello
 
-# Hello, world!
+Paragraph.
 
-# Hello, world!
+> World
+
+Paragraph.
+
+> World
+
+* \[x] somechekbox
+* \[ ] somechekbox not done
+* \[] Not right checkbox
+* \[-] Not right checkbox
+
+Here is some text.. Duplicate punctiation.
 
 <Card>
   <h1>Hello, world!</h1>
 </Card>
 
-# Hello, world!
-
-# Hello, world!
+```js
+const a = 1;
+a = 2;
+console.log(a);
+```
 
 <Button>Something</Button>
