chore(all): Documented things to do added retext plugins

--- a/components/projects/projects-page.mdx
+++ b/components/projects/projects-page.mdx
@@ -1,1 +1,8 @@
 # Hello, world!
+
+prject
+The cat sat on the mat
+
+The constellation also contains an isolated neutron
+star—Calvera—and H1504+65, the hottest white dwarf yet
+discovered, with a surface temperature of 200,000 kelvin
